# depo_final_wave8

./: .env.example  .eslintrc.json  .gitignore  AUDIT.md  AUDIT_CERT.md  AUDIT_STAGE5.md  AUDIT_WAVE21.md  CERTIFICATE_FIELDS_BUILD.md  CLAUDE.md  OVERNIGHT_BUILD.md  PROGRESS_STAGE5.md  PROGRESS_WAVE21.md  README.md  SCROLLBAR_VISIBILITY.md  VALIDATION_WAVE21.md  collect_intake_audit_bundle.ps1  depo_pack_frontend.ps1  development_workflow.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  result.txt  tailwind.config.js
backend/: app.py  config.py  requirements-dev.txt  requirements.txt
desktop/: launcher.py
docs/: ACTIVE_SPEC_REGISTRY.md  BLOCKERS.md  DEPO-PRO_Field_Template_Matrix.md  DEPO-PRO_ROADMAP_2026-05-31.md  DEPO-PRO_UFM_Data_Dictionary_v2.md  EXPORT_AND_CERTIFICATION_PIPELINE.md  GOVERNANCE_MAINTENANCE_RULES.md  JOB_LOADING_REPORT.md  PROGRESS.md  PROGRESS_CERT.md  SCROLLBAR_AUDIT.md  SCROLLBAR_FIX.md  SCROLLBAR_FIX_RESULT.md  STAGE5_CERTIFY_WIRING.md  STAGE5_JOBID_REPORT.md  SYSTEM_OWNERSHIP.md  TRANSCRIPT_ORCHESTRATION.md  WAVE10_DIFF_HARNESS_NOTES.md  WAVE10_FOUNDATION_NOTES.md  WAVE10_STAGE_X_NOTES.md  architecture.md  backlog.md  development_workflow.md  nod_parser_spec.md  roadmap_ufm_production.md  runtime_wiring_audit.md  ufm_schema_v1.md  wave11_build_completion.md  wave11_workspace_speaker_panel.md  wave12_export_preview.md  wave13_stage_s_structural.md  wave14_stage_x_lexicon.md  wave15a_reconciliation.md  wave15b_ai_review_layer.md  wave16_ai_generators.md  wave17_test_offline_insulation.md  wave18_export_menu.md  (+15 more)
(+353 files in other folders)
